Sat Dec 15 09:30:31 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Configuration.cpp: Make the return code of enumerate_values()
	  consistent with enumerate_sections().  Thanks to Kevin Burge
 	  <kevin.burge@systemware.com> for reporting this.

Fri Dec 14 21:36:29 2001  Steve Huston  <shuston@riverace.com>

        * ace/ace.icc: Adjusted file list as a result of split-apart
          Strategies.* files (Mon Dec 10 15:39:22 2001  Balachandran Natarajan)

        * ace/Connection_Recycling_Strategy.cpp:
        * ace/Hashable.cpp:
        * ace/Recyclable.cpp:
        * ace/Refcountable.cpp: Changed the ACE_RCSID to reflect the correct
          module name (they all still were named Strategies, from whence
          they came.

Fri Dec 14 14:05:09 2001  Carlos O'Ryan  <coryan@uci.edu>

	* ace/svc_export.h:
	* netsvcs/clients/Naming/Dump_Restore/Dump_Restore.dsp:
	  Found a better way to deal with the inconsistencies in the
	  ACE_Svc_Export macro.

	* netsvcs/clients/Naming/Dump_Restore/Dump_Restore_static.dsp:
	  Fixed project file for static library.

Fri Dec 14 11:35:01 2001  Craig Rodrigues  <crodrigu@bbn.com>

	* ace/SSL/SSL_SOCK_Acceptor.h:
	* ace/SSL/SSL_SOCK_Connector.h:
	* examples/QOS/Simple/Fill_ACE_QoS.h:
	* examples/QOS/Change_Receiver_FlowSpec/Fill_ACE_QoS.h:
	* examples/QOS/Change_Sender_TSpec/Fill_ACE_QoS.h:
	  Add #include "ace/OS_QoS.h".

Thu Dec 13 22:16:02 2001  Carlos O'Ryan  <coryan@uci.edu>

	* ace/svc_export.h:
	  Support ACE_Svc_BUILD_DLL also, to be consistent with all the
	  other export macros.

	* netsvcs/clients/Naming/Dump_Restore/Dump_Restore.h:
	  Add missing ACE_Svc_Export to the class.

	* netsvcs/clients/Naming/Dump_Restore/Dump_Restore.dsw:
	* netsvcs/clients/Naming/Dump_Restore/Dump_Restore.dsp:
	* netsvcs/clients/Naming/Dump_Restore/Dump_Restore_static.dsp:
	* netsvcs/clients/Naming/Dump_Restore/main.dsp:
	  Add missing project files and a workspace.
